[package]
name = "cloud-vision-flows"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Google Cloud Vision integration for flows.network"
documentation = "https://docs.rs/cloud-vision-flows"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[package.metadata.docs.rs]
default-target = "wasm32-wasi"

[dependencies]
http_req_wasi = "0.10"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2"
